# partypad

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  ap_helper.py  dashboard.py  device_auth.py  hotspot.py  online_transport.py  partypad.py  partypad.spec  pyproject.toml  server.py  setup_dolphin.py  setup_online.py  setup_retroarch.py  systems.py  uinput_backend.py  version.py
.github/workflows/: release.yml  tests.yml
cloudflare/: README.md  package-lock.json  package.json  vitest.config.ts  wrangler.jsonc
cloudflare/migrations/: 0001_device_authorization.sql  0002_aggregate_metrics.sql
cloudflare/src/: index.ts
cloudflare/test/: env.d.ts  index.test.ts
docs/: README.md  acceptable-use.md  device-authorization-protocol.md  operations.md  privacy.md  signing-and-release.md
docs/roadmaps/: umd-self-service.md
packaging/: UNSIGNED-ALPHA.txt
packaging/windows/: partypad.iss
retroarch/: PartyPad Controller.cfg
static/: app.js  index.html  style.css
tests/: test_core.py
tools/: browser_smoke.py  generate_sbom.py
