[project]
name = "partypad"
version = "0.2.0"
description = "Turn phone browsers into controllers for Dolphin and RetroArch"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Ben Ross" }]
keywords = ["dolphin", "retroarch", "emulation", "controller", "dsu", "uinput"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "aiohttp>=3.9",
    "evdev>=1.7; sys_platform == 'linux'",
    "keyring>=25.7",
    "qrcode>=7.4",
]

[project.urls]
Homepage = "https://github.com/benmross/partypad"
Issues = "https://github.com/benmross/partypad/issues"

[project.optional-dependencies]
online = [
    "aiortc>=1.14,<2",
]

[dependency-groups]
build = [
    "packaging>=25",
    "pyinstaller>=6.16,<7",
]
browser = [
    "selenium>=4.39,<5",
]

[tool.ruff]
target-version = "py311"
line-length = 100
